2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-11-22  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.bench: Added a new bench for OID decoding

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.pcx: New file. Syntax definitions for the public commands of
	  the asn package.

2008-03-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.man: Added documentation for a number of public yet not
	  documented.

2008-03-09  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.tcl  : Added (optional ) support for Tcl 8.5 unsigned binary 
	  asn.man  : scan to speed up byte extraction.
	  pkgIndex.tcl:

2007-09-18  Michael Schlenker <mic42@users.sourceforge.net>

        * asn.tcl  : Fixed missing padding in bitstring encoder 
          asn.man  : Tcllib SF [1797428], added some tests for
          asn.test :  Bitstrings. Patchlevel now 0.8.2.
	  
2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-04-20  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.tcl   : Fixed misspelt PRIVATE name in docs and code,
	  asn.man   : Tcllib SF [1704626].
	  asn.test  : Fixed various glitches in the new commands and
	  added more tests for asnPeekTag and asnTag.
	  Version raised to 0.8.1.

2007-04-20  Michael Schlenker <mic42@users.sourceforge.net>

	* asn.tcl   : Fixed documentation bug Tcllib [1703408].
	  asn.man   : Fixed parts of [1558351] by adding handling
	  asn.bench : for tag numbers > 31 and some new commands
	  asn.test  : for changing tags.