@@ -2,12 +2,12 @@
 [manpage_begin asn n 0.8]
 [copyright {2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [copyright {2004 Jochen Loewer <loewerj@web.de>}]
-[copyright {2004-2008 Michael Schlenker <mic42@users.sourceforge.net>}]
+[copyright {2004-2011 Michael Schlenker <mic42@users.sourceforge.net>}]
 [moddesc   {ASN.1 processing}]
 [category  Networking]
 [titledesc {ASN.1 BER encoder/decoder}]
 [require Tcl 8.4]
-[require asn [opt 0.8.3]]
+[require asn [opt 0.8.4]]
 [description]
 [para]
 
